# slidecast

./: .gitignore  README.md  pyproject.toml
scripts/: to_video_still_image.sh
src/slidecast/: main.py  ytsrt.py
